<resources>
    <string name="app_name">Stone Wars</string>
    <string name="error_title_message">Opss...</string>
    <string name="retry_connection">Tentar novamente</string>
    <string name="price_indicator">Preço: </string>
    <string name="seller_indicator">Vendidor por:</string>
    <string name="product_card_add_to_cart">Adicionar</string>
    <string name="menu_transaction_history">Histórico de Transações</string>
    <string name="menu_shopping_cart">Carrinho de Compras</string>
    <string name="finish_checkout">Finalizar Compra</string>
    <string name="total_price_label">Valor total :</string>
    <string name="payment_info_title">Informações de pagamento</string>
    <string name="cardnumber_edittext_hint">Número do cartão</string>
    <string name="confirm_payment">Confirmar</string>
    <string name="cancel_payment">Cancelar</string>
    <string name="empty_cart">Seu carrinho está vazio :(</string>
    <string name="invalid_cardnumber">Número de Cartão Inválido</string>
    <string name="invalid_cardholder_name">Nome inválido</string>
    <string name="invalid_date">Data Inválida</string>
    <string name="invalid_cvv">CVV Inválido</string>
    <string name="empty_trans_history">Histórico vazio :(</string>
</resources>
