<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/product_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/catalog_card_margin"
        android:elevation="@dimen/catalog_card_elevation"
        card_view:cardCornerRadius="@dimen/catalog_card_radius">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/product_card_background">

            <ImageView
                android:id="@+id/thumbnail_imageview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thumbnail_product_height"
                android:layout_margin="@dimen/thumbnail_product_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitXY"
                android:padding="3dp" />

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail_imageview"
                android:paddingLeft="@dimen/product_info_padding"
                android:paddingRight="@dimen/product_info_padding"
                android:paddingBottom="@dimen/product_info_padding"
                android:paddingTop = "2dp"
                android:text="Nome"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_title_textsize" />

            <TextView
                android:id="@+id/price_indicator_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_textview"
                android:paddingBottom="@dimen/product_price_padding_bottom"
                android:paddingLeft="@dimen/product_info_padding"
                android:paddingRight="@dimen/product_price_indicator_padding"
                android:text="@string/price_indicator"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_info_textsize" />

            <TextView
                android:id="@+id/price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_textview"
                android:layout_toRightOf="@+id/price_indicator_textview"
                android:paddingRight="@dimen/product_info_padding"
                android:layout_marginBottom="2dp"
                android:text="R$1200,00"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_info_textsize" />

            <TextView
                android:id="@+id/seller_indicator_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_textview"
                android:paddingBottom="@dimen/product_price_padding_bottom"
                android:paddingLeft="@dimen/product_info_padding"
                android:paddingRight="@dimen/product_price_indicator_padding"
                android:text="@string/seller_indicator"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_info_textsize" />

            <TextView
                android:id="@+id/seller_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_textview"
                android:layout_toRightOf="@+id/seller_indicator_textview"
                android:paddingRight="@dimen/product_info_padding"
                android:text="Dino da Silva Sauro"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/product_info_textsize" />

            <Button
                android:id="@+id/add_to_cart_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seller_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:drawablePadding="3dp"
                android:drawableRight="@drawable/ic_add_shopping_cart"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="0dp"
                android:text="@string/product_card_add_to_cart"
                android:textColor="@color/addToCartTextColor" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>